--- a/view/css/index.css
+++ b/view/css/index.css
@@ -110,6 +110,7 @@ nav ul li a:hover {
 
 .banner img{
   width: 100%;
+  height: 500px;
 }
 .productt{
   width: 85%;
@@ -123,6 +124,7 @@ nav ul li a:hover {
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-gap: 15px;
   padding: 15px;
+  
   
 }
 .pro-items{
