Thêm thống kê và biểu đồ ở trang admin

--- a/view/css/index.css
+++ b/view/css/index.css
@@ -154,11 +154,15 @@ nav ul li a:hover {
 
 }
 .trung{
-  display: flex;
+  display: inline;
   align-items: center;
   padding-top: 15px;
   padding-bottom: 15px;
   
+}
+.trung input{
+ margin-bottom: 20px;
+ margin-left: 100px;
 }
 
 /* footer {
@@ -304,7 +308,7 @@ table{
   float: left;
   width: 100%;
   min-height: 100px;
-  border: 1px solid gray;
+  /* border: 1px solid gray; */
   margin: 20px 0;
   border-radius: 10px;
 }
@@ -333,7 +337,7 @@ table{
   float: left;
   width: 100%;
   min-height: 300px;
-  border: 1px solid gray;
+  /* border: 1px solid gray; */
   margin: 20px 0;
   border-radius: 10px;
 }
@@ -459,3 +463,57 @@ table{
   background-color: #f1f1f1;
   
 }
+
+
+/* Giỏ hàng */
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+table th, table td {
+  padding: 10px;
+  border: 1px solid #ddd;
+  text-align: left;
+}
+
+table th {
+  background-color: #f4f4f4;
+}
+
+table td a {
+  color: red;
+  text-decoration: none;
+}
+
+table td a:hover {
+  text-decoration: underline;
+}
+
+form input[type="number"] {
+  width: 50px;
+  padding: 5px;
+  text-align: center;
+}
+
+button {
+  padding: 5px 10px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #45a049;
+}
+
+a {
+  color: #008CBA;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
