--- a/view/css/index.css
+++ b/view/css/index.css
@@ -517,3 +517,119 @@ a:hover {
   text-decoration: underline;
 }
 
+
+
+/* TIn tuc*/
+.page-gt {
+	width: 80%;
+	margin: 50px 0 150px 100px;
+}
+
+.page-header {
+	height: 40px;
+	background: pink;
+	line-height: 40px;
+	padding-left: 10px;
+}
+
+.page-info {
+	font-size: 15px;
+	margin-top: 20px;
+}
+
+
+/* lien he */
+
+.body-lienhe{
+	margin: 30px 50px 50px 50px;
+	width: 90%;
+
+}
+.lienhe-header{
+	height: 40px;
+	font-weight: bold;
+	line-height: 40px;
+	padding-left: 10px;
+	background: pink;
+}
+.lienhe-info{
+	margin: 20px auto 0; 
+	display: inline-block;
+	width: 100%;
+}
+.info-left{
+	float: left;
+	width: 48%;
+}
+.info-right {
+	float: right;
+	width: 48%;	
+}
+iframe {
+	border: 1px solid gray;
+}
+.guithongtin {
+	width: 45%;
+	float: left;
+}
+.thongtinnhom{
+	width: 50%;
+	float: right;
+}
+table{	
+	margin-top: 10px;
+	height: 20px;
+}
+table input{
+	padding: 5px;
+}
+/* table button{
+	padding: 5px;
+	cursor: pointer;
+	background: #FFF;
+	border: 1px solid #0C9;
+}
+table button:hover{
+	background: #0C9;
+} */
+.thongtinnhom table{
+	border-collapse: collapse;
+	margin-top: 20px;
+}
+.thongtinnhom table td,th{
+	border: 1px solid #0C9;	
+	height: 30px;
+	padding: 3px;
+	text-align: center;
+}
+/* những tr chẵn sẽ có màu khác */
+.thongtinnhom tr:nth-of-type(even) {background-color: #f2f2f2;}
+
+
+/* tuyển dụng */
+.body-tuyendung{
+	margin: 50px ;
+	width: 90%;
+}
+.tuyendung-header{
+	height: 40px;
+	font-weight: bold;
+	line-height: 40px;
+	padding-left: 10px;
+	background: pink;
+}
+.tuyendung-info{
+	margin: 10px;
+}
+.tieude{
+	color: #0C9;
+	text-align: center;
+	font-size: 28px;
+}
+.tuyendung-noidung{
+	margin:10px 0 15px 25px;
+}
+ul li span{
+	font-weight: bold;
+	color: red;
+}
